force-app/main/default/objects/Supply__c/fields/Utilization__c.field-meta.xml
<CustomField>
    <fullName>Utilization__c</fullName>
    <formula>(Total_Quantity__c - Quantity__c)/ Total_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>