force-app/main/default/objects/Supply__c/validationRules/quantity_greater_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>quantity_greater_zero</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>The quantity must be a value greater than or equal to zero.</errorMessage>
</ValidationRule>