force-app/main/default/objects/Supply__c/validationRules/unity_cost_greater_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>unity_cost_greater_zero</fullName>
    <active>true</active>
    <errorConditionFormula>Unit_Cost__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Unit_Cost__c</errorDisplayField>
    <errorMessage>The Unity Cost must be a value greater than zero.</errorMessage>
</ValidationRule>