force-app/main/default/objects/Supply__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Quantity__c</columns>
    <columns>Utilization__c</columns>
    <columns>Total_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>